# Hull-Tactical---Market-Prediction

./: .coverage  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/agents/: my-agent.md
.github/workflows/: ci.yml
artifacts/tier0/: feature_list.json  model_meta.json
configs/: feature_generation.yaml  preprocess.yaml  su7_sweep.yaml
configs/ensemble/: phase1.yaml  phase2.yaml  phase3.yaml  step1_lgbm_xgb_avg.yaml  step2_lgbm_xgb_rank.yaml  step3_lgbm_xgb_cat.yaml  step4_3model_rank.yaml  step5_stacking.yaml
configs/evaluation/: two_head.yaml  walk_forward.yaml
configs/feature_selection/: feature_sets.json  tier1_excluded.json
configs/models/: catboost.yaml  elasticnet.yaml  extratrees.yaml  lasso.yaml  randomforest.yaml  ridge.yaml  xgboost.yaml
configs/preprocess/: preprocess.yaml
docs/: EDA.md  feature_generation.md  preprocessing.md  submissions.md
docs/EDA/: EDA.md
docs/ensemble/: README.md  step1_lgbm_xgb_avg.md  step2_lgbm_xgb_rank.md  step3_lgbm_xgb_cat.md  step4_3model_rank.md  step5_stacking.md
docs/evaluation/: README.md  hull_sharpe_spec.md  hull_sharpe_walkforward_plan.md  optimized_settings.md  prediction_clipping.md  prediction_clipping_impl.md  two_head_learning.md  two_head_learning_spec.md
docs/feature_generation/: 02_Defective_structure.md  README.md  SU1.md  SU10.md  SU11.md  SU1_5_brushup.md  SU2.md  SU3.md  SU3_Stage1_adoption.md  SU4.md  SU5.md  SU7.md  SU7_sweep_issue.md  SU8.md  SU9.md  lagged.md
notebooks/: eda.ipynb
scripts/: check_quality.sh  cv_timeseries_simple.py  fetch_data.sh  run_su3_sweep.sh  tune_position_mapping.py  utils_msr.py
tests/: conftest.py  test_msr_proxy_utils.py  test_pipeline_msr_proxy.py  test_pipeline_simple_baseline.py  test_utils_mock.py
(+229 files in other folders)
