[project]
name = "hull-tactical-market-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "numpy==1.26.4",
    "optuna>=4.5.0",
    "pandas>=2.2.0,<2.3.0",
    "pyyaml>=6.0.0",
    "pyarrow>=21.0.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "varclushi>=0.1.0",
    "xgboost>=3.1.2",
]

[tool.pyright]
include = ["src", "tests"]
exclude = ["data", "artifacts", ".venv", ".uv", ".pytest_cache", ".ruff_cache"]
reportMissingImports = true
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
exclude = [
    ".venv",
    ".uv",
    ".pytest_cache",
    ".ruff_cache",
    "data",
    "artifacts",
]
